public class Constants
{
    public class Animation
    {
        public const string VELOCITY_X = "VelocityX";
        public const string VELOCITY_Z = "VelocityZ";
        
        public const string ATTACK = "Attack";
        public const string WEAPON_INDEX = "WeaponIndex";
        public const string ATTACK_INDEX = "AttackIndex";

        public const string DIVE = "Dive";
        public const string IS_MID_AIR = "IsMidAir";
    }
}
